Change way of loading csv data

--- a/pages/chart-page.html
+++ b/pages/chart-page.html
@@ -1128,7 +1128,7 @@
 
 
 
-
+<!-- csv data -->
 <pre id="csv" style="display:none">
   Date,Price Against BTC,Price Against USD
 2018-10-03,6498.46,224.85
@@ -1956,8 +1956,8 @@
 2016-07-03,701.23,12.16
 2016-07-02,680.61,12.3
 2016-07-01,672.45,12.49
-
 </pre>
+<!-- end csv data -->
 
 
         <!-- Back to top -->
